<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    tools:context="com.ioc.fbarcia.eac1_2017s1.SecondActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/lblCarrer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/street"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/editCarrer"
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:inputType="text"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="5dp"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@+id/lblCarrer"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/lblCP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/postal_code"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/lblCarrer"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/editCP"
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:inputType="number"
        android:layout_marginStart="5dp"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@+id/lblCP"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/lblCarrer" />

    <TextView
        android:id="@+id/lblPoblacio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/population"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/lblCP" />

    <EditText
        android:id="@+id/editPoblacio"
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:inputType="text"
        android:layout_marginStart="5dp"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@+id/lblPoblacio"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/lblCP" />

    <TextView
        android:id="@+id/lblTlf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/lblPoblacio" />

    <EditText
        android:id="@+id/editTlf"
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:inputType="phone"
        android:layout_marginStart="5dp"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@+id/lblTlf"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/lblPoblacio" />

    <TextView
        android:id="@+id/lblWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/webpage"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/lblTlf" />

    <EditText
        android:id="@+id/editWeb"
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:inputType="textWebEditText"
        android:layout_marginStart="5dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/lblTlf"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toRightOf="@+id/lblWeb"
        android:layout_marginLeft="24dp" />

    <Button
        android:id="@+id/btnSendAct2"
        android:onClick="onClickAccept"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="25dp"
        android:text="@string/accept"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblWeb"
        android:layout_marginRight="24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.25" />

    <Button
        android:id="@+id/btnCancelAct2"
        android:onClick="onClickCancel"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="88dp"
        android:layout_height="0dp"
        android:layout_marginLeft="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="25dp"
        android:text="@string/cancel"
        app:layout_constraintLeft_toRightOf="@+id/btnSendAct2"
        app:layout_constraintTop_toBottomOf="@+id/lblWeb"
        android:layout_marginRight="25dp"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>