<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    tools:context="com.ioc.fbarcia.eac1_2017s1.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="49dp"
        android:layout_marginRight="49dp"
        android:layout_marginStart="50dp"
        android:text="@string/name_lastname"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageButton
        android:id="@+id/btnAdd"
        android:onClick="onClickNou"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="330dp"
        android:layout_marginTop="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

    <ImageButton
        android:id="@+id/btnErase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="38dp"
        android:layout_marginTop="24dp"
        android:onClick="onClickErase"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_delete"
        app:layout_constraintLeft_toRightOf="@+id/btnAdd"
        android:layout_marginLeft="0dp" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="420dp"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="37dp"
        android:layout_marginRight="38dp"
        android:layout_marginStart="37dp"
        android:onClick="onClickEditar"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@android:drawable/ic_menu_edit"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@+id/editName"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.89" />

    <ImageButton
        android:id="@+id/btnCancel"
        android:onClick="onClickCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginStart="36dp"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        android:layout_marginTop="1dp"
        app:layout_constraintTop_toBottomOf="@+id/btnEdit"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.9" />

    <TextView
        android:id="@+id/lblAdresa"
        android:layout_width="81dp"
        android:layout_height="25dp"
        android:text="@string/address"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/editName"
        android:layout_marginLeft="50dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/lblCarrer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/street"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/lblAdresa" />

    <TextView
        android:id="@+id/txtCarrer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="27dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="20dp"
        android:text="@string/undefined"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@+id/lblCarrer"
        app:layout_constraintTop_toBottomOf="@+id/lblAdresa" />

    <TextView
        android:id="@+id/lblCP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/postal_code"
        android:layout_marginLeft="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/lblCarrer" />

    <TextView
        android:id="@+id/txtCP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="12dp"
        android:text="@string/undefined"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@+id/lblCP"
        app:layout_constraintTop_toBottomOf="@+id/lblCarrer" />

    <TextView
        android:id="@+id/lblPoblacio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/population"
        android:layout_marginLeft="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/lblCP" />

    <TextView
        android:id="@+id/txtPoblacio"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="12dp"
        android:text="@string/undefined"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@+id/lblPoblacio"
        app:layout_constraintTop_toBottomOf="@+id/lblCP" />

    <ImageButton
        android:id="@+id/btnPhone"
        android:onClick="onClickPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="38dp"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@android:drawable/ic_menu_call"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/btnCancel"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.902" />

    <ImageButton
        android:id="@+id/btnWeb"
        android:onClick="onClickWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="38dp"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@android:drawable/ic_menu_view"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/btnPhone"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.9" />

    <TextView
        android:id="@+id/lblPersonalData"
        android:layout_width="162dp"
        android:layout_height="24dp"
        android:text="@string/personal_data"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginLeft="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/lblPoblacio" />

    <TextView
        android:id="@+id/lblTlf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:layout_marginLeft="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/lblPersonalData" />

    <TextView
        android:id="@+id/txtTlf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/undefined"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@+id/lblTlf"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/lblPersonalData" />

    <TextView
        android:id="@+id/lblWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/webpage"
        android:layout_marginLeft="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/lblTlf" />

    <TextView
        android:id="@+id/txtWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/undefined"
        android:textSize="12sp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/lblTlf"
        app:layout_constraintLeft_toRightOf="@+id/lblWeb"
        android:layout_marginLeft="5dp" />

    <Button
        android:id="@+id/btnSend"
        android:onClick="onClickSend"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginBottom="48dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="1dp"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/lblWeb" />

</android.support.constraint.ConstraintLayout>
